--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -130,4 +130,20 @@
   id: 32
   name: "Ángela"
   surname: "Sanzo"      
+  
+-
+  id: 33
+  name: "Joshua"
+  surname: "Kunst"   
+  
+  
+-
+  id: 34
+  name: "Danielle"
+  surname: "Navarro"   
+  
+-
+  id: 35
+  name: "Gabriela"
+  surname: "de Queiroz"     
  
