adiciona informacoes das sessoes de quinta-feira

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -300,5 +300,97 @@
 -
   id: 64
   name: "Achim"
-  surname: "Zeileis"        
+  surname: "Zeileis"  
+  
+-
+  id: 65
+  name: "Irma"
+  surname: "Noemi No"  
+  
+-
+  id: 66
+  name: "Julián"
+  surname: "E. Tornillo"    
+
+-
+  id: 67
+  name: "Guadalupe"
+  surname: "Pascal" 
+  
+-
+  id: 68
+  name: "Leandro"
+  surname: "Rabbione"   
+  
+-
+  id: 69
+  name: "Rafael"
+  surname: "Zambrano"   
+  
+  
+-
+  id: 70
+  name: "Mauro"
+  surname: "Loprete"    
+  
+-
+  id: 71
+  name: "Paulo"
+  surname: "Villarroel"     
+  
+-
+  id: 72
+  name: "Matías"
+  surname: "Martínez"  
+  
+  
+-
+  id: 73
+  name: "Julio"
+  surname: "Spairani"   
+  
+-
+  id: 74
+  name: "Juan"
+  surname: "Pablo Ferrandez"   
+  
+-
+  id: 75
+  name: "Natalia"
+  surname: "Gatinoni"   
+  
+-
+  id: 76
+  name: "Romina"
+  surname: "Mezher"     
+  
+-
+  id: 77
+  name: "María José"
+  surname: "Pizarro"       
+  
+-
+  id: 78
+  name: "Lorena"
+  surname: "Verónica Carreño"   
+  
+-
+  id: 79
+  name: "Rosario"
+  surname: "Olguín Paez"     
+  
+-
+  id: 80
+  name: "María Laura"
+  surname: "Belmonte"  
+  
+-
+  id: 81
+  name: "Elina"
+  surname: "Gómez"
+  
+-
+  id: 82
+  name: "Martín"
+  surname: "Opertti"    
   
