--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -393,4 +393,244 @@
   id: 82
   name: "Martín"
   surname: "Opertti"    
+
+-
+  id: 83
+  name: "Rafael"
+  surname: "Zambrano"     
+
+-
+  id: 84
+  name: "Karina"
+  surname: "Bartolomé"       
+
+-
+  id: 85
+  name: "Andreas"
+  surname: "Schneider"         
+
+-
+  id: 86
+  name: "Tainá"
+  surname: "Rocha"
+  
+-
+  id: 87
+  name: "Leonardo"
+  surname: "A. Saravia"  
+  
+-
+  id: 88
+  name: " Tomás I."
+  surname: "Marina"  
+  
+-
+  id: 89
+  name: "Iara D."
+  surname: "Rodríguez"   
+  
+-
+  id: 90
+  name: "Susanne"
+  surname: "Kortsch"    
+  
+-
+  id: 91
+  name: "Carlos"
+  surname: "Manacorda"    
+  
+-
+  id: 92
+  name: "Pablo"
+  surname: "Cáceres"      
+  
+-
+  id: 93
+  name: "Moira"
+  surname: "Sutka"  
+  
+-
+  id: 94
+  name: "Irene"
+  surname: "Baroli"    
+  
+-
+  id: 95
+  name: "Gabriela"
+  surname: "Amodeo"   
+
+-
+  id: 96
+  name: "Sebastián"
+  surname: "Asurmendi" 
+  
+-
+  id: 97
+  name: "Carolina"
+  surname: "Musso"   
+  
+-
+  id: 98
+  name: "Hudson"
+  surname: "Fontenele"     
+  
+  
+-
+  id: 99
+  name: "Paola"
+  surname: "Freitas"       
+  
+-
+  id: 100
+  name: "Taynná"
+  surname: "Almeida"     
+  
+-
+  id: 101
+  name: "Janaina"
+  surname: "Sallas" 
+  
+-
+  id: 102
+  name: "Greg"
+  surname: "Wilson"  
+  
+-
+  id: 103
+  name: "Alejandra"
+  surname: "Bellini"    
+  
+-
+  id: 104
+  name: "Laurie"
+  surname: "Baker"
+  
+-
+  id: 105
+  name: "Juan Ignacio"
+  surname: "Baccino Costa"  
+-
+  id: 106
+  name: "Ramón"
+  surname: "Alvarez-Vaz"   
+  
+-
+  id: 107
+  name: "Gonzalo"
+  surname: "De Armas"   
+  
+-
+  id: 108
+  name: "Diego"
+  surname: "Araujo"     
+  
+-
+  id: 109
+  name: "Ramón"
+  surname: "Álvarez-Vaz"     
+  
+-
+  id: 110
+  name: "Mauro"
+  surname: "De la Vega"      
+  
+  
+-
+  id: 111
+  name: "Nathan"
+  surname: "A. Miller"     
+  
+-
+  id: 112
+  name: "Tyler"
+  surname: "Clavelle"  
+  
+-
+  id: 113
+  name: "Heather"
+  surname: "Turner"    
+
+
+-
+  id: 114
+  name: "Dorothea"
+  surname: "Hug Peter"   
+  
+-
+  id: 115
+  name: "Natalia"
+  surname: "Soledad Morandeira" 
+  
+  
+-
+  id: 116
+  name: "Matt"
+  surname: "Bannert"   
+  
+  
+  
+-
+  id: 117
+  name: "Batool"
+  surname: "Almazrouq"   
+  
+    
+-
+  id: 118
+  name: "Elizabeth"
+  surname: "Hare" 
+  
+    
+-
+  id: 119
+  name: "Laura"
+  surname: "Ación"
+  
+    
+-
+  id: 120
+  name: "Juan Pablo"
+  surname: "Narváez-Gómez"
+  
+   
+-
+  id: 121
+  name: "Marcela"
+  surname: "Alfaro Córdoba"  
+  
+-
+  id: 122
+  name: "Federico"
+  surname: "Marini"    
+  
+-
+  id: 123
+  name: "Rita"
+  surname: "Giordano"    
+  
+-
+  id: 124
+  name: "Silvia"
+  surname: "Canelón"   
+  
+-
+  id: 125
+  name: "Anicet"
+  surname: "Ebou"    
+  
+-
+  id: 126
+  name: "Adithi"
+  surname: "Upadhya" 
+  
+-
+  id: 127
+  name: "Joselyn"
+  surname: "Chávez"   
+  
+-
+  id: 128
+  name: "Janani"
+  surname: "Ravi"     
+  
   
